# charged

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
dashboard/: load_data.py  main.py  preprocess_data.py
dashboard/tabs/: __init__.py  tab1.py  tab2.py  tab3.py  tab4.py  tab5.py
notebooks/: andreas_notebook.ipynb  data_exploration.ipynb  minute_data.ipynb  sebastian_map.ipynb  template_notebook.ipynb
src/charged/: snowflake_utils.py
streamlit/: dashboard.py
